# Android_NDK_demo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opencv/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/opencv/ndkdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/opencv/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ndkandroidcmake/: CMakeLists.txt  build.gradle
ndkandroidcmake/src/androidTest/java/com/example/opencv/ndkandroidcmake/: ExampleInstrumentedTest.java
ndkandroidcmake/src/main/: AndroidManifest.xml
ndkandroidcmake/src/main/cpp/: qt-android_global.h  qtandroid.h  test.cpp
ndkandroidcmake/src/main/java/com/example/opencv/ndkandroidcmake/: AndroidCmakeNative.java
ndkandroidcmake/src/test/java/com/example/opencv/ndkandroidcmake/: ExampleUnitTest.java
ndkandroidmk/: build.gradle
ndkandroidmk/src/androidTest/java/com/example/opencv/ndkandroidmk/: ExampleInstrumentedTest.java
ndkandroidmk/src/main/: AndroidManifest.xml
ndkandroidmk/src/main/cpp/: Android.mk  test.cpp
ndkandroidmk/src/main/java/com/example/opencv/ndkandroidmk/: AndroidMkNative.java
ndkandroidmk/src/test/java/com/example/opencv/ndkandroidmk/: ExampleUnitTest.java
